--- a/trunk/mogwai/MogwaiPowerstaff/.classpath
+++ b/trunk/mogwai/MogwaiPowerstaff/.classpath
@@ -20,7 +20,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/el-impl-1.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate3.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-serialization.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-facelets.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-facelets.jar" sourcepath="C:/sourcen/facelets-1.1.13/src/java"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.1.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/junit.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/log4j-1.2.14.jar"/>
@@ -29,14 +29,14 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-highlighter-2.2.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-common-1.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-web-1.0.jar" sourcepath="/MogwaiWeb"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-api-1.1.5.jar" sourcepath="C:/Temp/myfaces-core-1.1.5/src"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-impl-1.1.5.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-api-1.1.5.jar" sourcepath="C:/sourcen/myfaces-core-1.1.5/src"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-impl-1.1.5.jar" sourcepath="C:/sourcen/myfaces-core-1.1.5/src"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/quartz-all-1.6.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/richfaces-api-3.1.2.GA.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/richfaces-impl-3.1.2.GA.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/richfaces-ui-3.1.2.GA.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/tomahawk-1.1.6.jar" sourcepath="C:/Temp/tomahawk-1.1.6/src"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/tomahawk-1.1.6.jar" sourcepath="C:/sourcen/tomahawk-1.1.6/src"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/trove.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/velocity-1.5.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/tomahawk-facelets-taglib.jar"/>
