--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,131 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<context-param>
-		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>client</param-value>
-	</context-param>
-	<context-param>
-		<param-name>org.richfaces.SKIN</param-name>
-		<param-value>DEFAULT</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-		<param-value>.xhtml</param-value>
-	</context-param>
-	<context-param>
-		<param-name>facelets.DEVELOPMENT</param-name>
-		<param-value>false</param-value>
-	</context-param>
-	<context-param>
-		<param-name>facelets.LIBRARIES</param-name>
-		<param-value>/WEB-INF/mogwailayout.taglib.xml</param-value>
-	</context-param>
-	<context-param>
-		<param-name>mogwaicomponents.disable_guid_check</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/applicationContext.xml</param-value>
-	</context-param>
-    <context-param>
-        <param-name>org.apache.myfaces.COMPRESS_STATE_IN_SESSION</param-name>
-        <param-value>false</param-value>
-    </context-param>
-    <context-param>
-        <param-name>org.apache.myfaces.SERIALIZE_STATE_IN_SESSION</param-name>
-        <param-value>false</param-value>
-    </context-param>     	
-	<context-param>
-    	<param-name>org.apache.myfaces.SERIAL_FACTORY</param-name>
-    	<param-value>de.mogwai.common.web.serialization.JBossSerialFactory</param-value>
-  	</context-param>     
-	<context-param>
-		<param-name>
-			org.jboss.jbossfaces.WAR_BUNDLES_JSF_IMPL
-		</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	<listener>
-		<listener-class>
-			org.apache.myfaces.webapp.StartupServletContextListener
-		</listener-class>
-	</listener>
-	<listener>
-		<listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
-	</listener>
-	<servlet>
-		<servlet-name>FacesServlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>FacesServlet</servlet-name>
-		<url-pattern>*.faces</url-pattern>
-	</servlet-mapping>
-	<session-config>
-      <session-timeout>1000</session-timeout> 
-    </session-config>	
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
-	<filter>
-		<filter-name>MyFacesExtensionsFilter</filter-name>
-		<filter-class>
-			org.apache.myfaces.webapp.filter.ExtensionsFilter
-		</filter-class>
-		<init-param>
-			<param-name>maxFileSize</param-name>
-			<param-value>20m</param-value>
-		</init-param>
-	</filter>
-	<filter>
-		<display-name>RichFaces Filter</display-name>
-		<filter-name>richfaces</filter-name>
-		<filter-class>org.ajax4jsf.Filter</filter-class>
-	</filter>
-	<filter>
-		<filter-name>LoginFilter</filter-name>
-		<filter-class>
-			de.mogwai.common.web.filter.LoginPageSecurityFilter
-		</filter-class>
-		<init-param>
-			<param-name>startPage</param-name>
-			<param-value>/index.faces</param-value>
-		</init-param>
-	</filter>
-	<filter>
-		<filter-name>ResourceLoaderFilter</filter-name>
-		<filter-class>
-			de.mogwai.common.web.filter.ResourceLoaderFilter
-		</filter-class>
-		<init-param>
-			<param-name>baseResourceName</param-name>
-			<param-value>/de/mogwai/common/web/resources</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>ResourceLoaderFilter</filter-name>
-		<url-pattern>/resource/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>LoginFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>richfaces</filter-name>
-		<servlet-name>FacesServlet</servlet-name>
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>FORWARD</dispatcher>
-		<dispatcher>INCLUDE</dispatcher>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>MyFacesExtensionsFilter</filter-name>
-		<url-pattern>*.faces</url-pattern>
-	</filter-mapping>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+  <context-param>
+    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+    <param-value>client</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.richfaces.SKIN</param-name>
+    <param-value>DEFAULT</param-value>
+  </context-param>
+  <context-param>
+    <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+    <param-value>.xhtml</param-value>
+  </context-param>
+  <context-param>
+    <param-name>facelets.DEVELOPMENT</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>mogwaicomponents.disable_guid_check</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:/applicationContext.xml</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.apache.myfaces.COMPRESS_STATE_IN_SESSION</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.apache.myfaces.SERIALIZE_STATE_IN_SESSION</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.apache.myfaces.SERIAL_FACTORY</param-name>
+    <param-value>de.mogwai.common.web.serialization.JBossSerialFactory</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.jboss.jbossfaces.WAR_BUNDLES_JSF_IMPL</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>FacesServlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FacesServlet</servlet-name>
+    <url-pattern>*.faces</url-pattern>
+  </servlet-mapping>
+  <session-config>
+    <session-timeout>1000</session-timeout>
+  </session-config>
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  <filter>
+    <filter-name>MyFacesExtensionsFilter</filter-name>
+    <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
+    <init-param>
+      <param-name>maxFileSize</param-name>
+      <param-value>20m</param-value>
+    </init-param>
+  </filter>
+  <filter>
+    <display-name>RichFaces Filter</display-name>
+    <filter-name>richfaces</filter-name>
+    <filter-class>org.ajax4jsf.Filter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>de.mogwai.common.web.filter.LoginPageSecurityFilter</filter-class>
+    <init-param>
+      <param-name>startPage</param-name>
+      <param-value>/index.faces</param-value>
+    </init-param>
+  </filter>
+  <filter>
+    <filter-name>ResourceLoaderFilter</filter-name>
+    <filter-class>de.mogwai.common.web.filter.ResourceLoaderFilter</filter-class>
+    <init-param>
+      <param-name>baseResourceName</param-name>
+      <param-value>/de/mogwai/common/web/resources</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>ResourceLoaderFilter</filter-name>
+    <url-pattern>/resource/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>richfaces</filter-name>
+    <servlet-name>FacesServlet</servlet-name>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>MyFacesExtensionsFilter</filter-name>
+    <url-pattern>*.faces</url-pattern>
+  </filter-mapping>
 </web-app>
-
