--- a/trunk/mogwai/MogwaiPowerstaff/.classpath
+++ b/trunk/mogwai/MogwaiPowerstaff/.classpath
@@ -40,5 +40,8 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/trove.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/velocity-1.5.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/tomahawk-facelets-taglib.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jcifs-1.2.22.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-core-2.0.3.jar" sourcepath="C:/Dokumente und Einstellungen/w2k admin/Desktop/spring-security-2.0.3/spring-security-2.0.3/dist/spring-security-core-2.0.3-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-ntlm-2.0.3.jar" sourcepath="C:/Dokumente und Einstellungen/w2k admin/Desktop/spring-security-2.0.3/spring-security-2.0.3/dist/spring-security-ntlm-2.0.3-sources.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
