--- a/trunk/mogwai/MogwaiPowerstaff/.classpath
+++ b/trunk/mogwai/MogwaiPowerstaff/.classpath
@@ -27,8 +27,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-analyzers-2.2.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-core-2.2.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-highlighter-2.2.0.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-common-1.0.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-web-1.0.jar" sourcepath="/MogwaiWeb"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-api-1.1.5.jar" sourcepath="C:/sourcen/myfaces-core-1.1.5/src"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/myfaces-impl-1.1.5.jar" sourcepath="C:/sourcen/myfaces-core-1.1.5/src"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/quartz-all-1.6.0.jar"/>
@@ -43,5 +41,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jcifs-1.2.22.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-core-2.0.3.jar" sourcepath="C:/Dokumente und Einstellungen/w2k admin/Desktop/spring-security-2.0.3/spring-security-2.0.3/dist/spring-security-core-2.0.3-sources.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-security-ntlm-2.0.3.jar" sourcepath="C:/Dokumente und Einstellungen/w2k admin/Desktop/spring-security-2.0.3/spring-security-2.0.3/dist/spring-security-ntlm-2.0.3-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-common-2.0.jar" sourcepath="/MogwaiCommon"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mogwai-web-2.0.jar" sourcepath="/MogwaiWeb"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
