--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>server</param-value>
+		<param-value>client</param-value>
 	</context-param>
 	<context-param>
 		<param-name>org.richfaces.SKIN</param-name>
@@ -45,18 +45,6 @@
 	<context-param>
 		<param-name>org.jboss.jbossfaces.WAR_BUNDLES_JSF_IMPL</param-name>
 		<param-value>true</param-value>
-	</context-param>
-	<context-param>
-        <param-name>org.ajax4jsf.COMPRESS_SCRIPT</param-name>
-        <param-value>true</param-value>
-	</context-param>
-	<context-param>
-		<param-name>org.richfaces.LoadStyleStrategy</param-name>
-		<param-value>all</param-value>
-	</context-param>    
-	<context-param>
-		<param-name>org.richfaces.LoadScriptStrategy</param-name>
-		<param-value>all</param-value>
 	</context-param>
 		
 	<listener>
@@ -101,16 +89,8 @@
 		<display-name>RichFaces Filter</display-name>
 		<filter-name>richfaces</filter-name>
 		<filter-class>org.ajax4jsf.Filter</filter-class>
-		<init-param>
-			<param-name>forceparser</param-name>
-			<param-value>false</param-value>
-		</init-param>
-		<init-param> 
-			<param-name>enable-cache</param-name>
-			<param-value>true</param-value> 
-		</init-param>
-				
 	</filter>
+	
 	<filter>
 		<filter-name>ResourceLoaderFilter</filter-name>
 		<filter-class>
