Migrated whole Lucene Stuff to Hibernate Search

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,6 +59,10 @@
         <listener-class>org.apache.myfaces.orchestra.conversation.servlet.ConversationManagerSessionListener</listener-class>
     </listener>
 
+    <listener>
+        <listener-class>de.powerstaff.web.utils.StartupServletContextListener</listener-class>
+    </listener>
+
 	<servlet>
 		<servlet-name>FacesServlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
