--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <aspectj.version>1.7.1</aspectj.version>
         <lucene.version>3.1.0</lucene.version>
-        <myfaces.version>1.1.10</myfaces.version>
+        <myfaces.version>1.2.12</myfaces.version>
         <oauth.version>20100601</oauth.version>
         <spring.version>3.0.5.RELEASE</spring.version>
         <poi.version>4.1.2</poi.version>
@@ -277,7 +277,7 @@
         <dependency>
             <groupId>com.sun.facelets</groupId>
             <artifactId>jsf-facelets</artifactId>
-            <version>1.1.13</version>
+            <version>1.1.14</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -442,7 +442,7 @@
         </dependency>
         <dependency>
             <groupId>com.ocpsoft</groupId>
-            <artifactId>prettyfaces-jsf11</artifactId>
+            <artifactId>prettyfaces-jsf12</artifactId>
             <version>3.3.3</version>
         </dependency>
         <dependency>
@@ -502,7 +502,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.tomahawk</groupId>
-            <artifactId>tomahawk</artifactId>
+            <artifactId>tomahawk12</artifactId>
             <version>1.1.14</version>
         </dependency>
         <dependency>
