Working on freelancer requirements.

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,3 +1,3 @@
 kias.database.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 kias.hibernate.showsql=false
-kias.index.dir=D:\\Mirko\\Arbeit\\Projekte\\Synekt\\DB\\PowerStaffFTIndex
+kias.index.dir=D:\\PowerStaffFTIndex
